[taotao-cloud-project-1547] update [ member order ]